--- a/css/style.css
+++ b/css/style.css
@@ -687,81 +687,75 @@ ul {
         height: 2px;
         background: #fff;
         margin: 5px;
-        -webkit-transition: -webkit-transform 0.5s;
-        transition: -webkit-transform 0.5s;
-        -o-transition: transform 0.5s;
-        transition: transform 0.5s;
-        transition: transform 0.5s, -webkit-transform 0.5s; }
-    .top-header .small-menu ul {
-      display: none;
-      margin: 0; }
-      .top-header .small-menu ul li a {
-        position: relative;
-        display: block;
-        background: #343434;
-        color: #fff;
-        text-decoration: none;
-        font-size: 1.3rem;
-        padding: 18px;
-        margin-bottom: 1px; }
-      .top-header .small-menu ul li a:after {
+        -webkit-transition: all 0.5s;
+        -o-transition: all 0.5s;
+        transition: all 0.5s; }
+    .top-header .small-menu div {
+      position: absolute;
+      overflow: hidden;
+      width: 100%;
+      height: 0;
+      visibility: hidden;
+      -webkit-transition: all 0.5s;
+      -o-transition: all 0.5s;
+      transition: all 0.5s; }
+      .top-header .small-menu div ul {
+        margin: 0;
+        background: #434343;
         position: absolute;
-        content: "";
-        background: url("../image/ico_arrow_white_right.png") center/cover no-repeat;
-        width: 0.5em;
-        height: 0.8em;
-        top: 40%;
-        right: 30px; }
-  .top-header .small-lang-nav {
-    position: absolute;
-    margin: 20px auto 0;
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: end;
-    -webkit-justify-content: flex-end;
-    -ms-flex-pack: end;
-    justify-content: flex-end; }
+        width: 100%;
+        height: inherit;
+        z-index: 999; }
+        .top-header .small-menu div ul li a {
+          position: relative;
+          display: block;
+          background: #343434;
+          color: #fff;
+          text-decoration: none;
+          font-size: 1.3rem;
+          padding: 18px;
+          margin-bottom: 1px; }
+        .top-header .small-menu div ul li a:after {
+          position: absolute;
+          content: "";
+          background: url("../image/ico_arrow_white_right.png") center/cover no-repeat;
+          width: 0.5em;
+          height: 0.8em;
+          top: 40%;
+          right: 30px; }
     @media screen and (max-width: 1199px) {
-      .top-header .small-lang-nav {
+      .top-header .small-menu .small-lang-nav {
         position: absolute;
         width: 100%;
         margin: 0;
-        top: 417px;
+        top: 356px;
         z-index: 999; } }
-    .top-header .small-lang-nav li {
-      padding: 0 1.3em; }
+    @media screen and (max-width: 1199px) {
+      .top-header .small-menu .small-lang-nav li {
+        background: #434343;
+        color: #5a5a5a;
+        text-align: center;
+        padding: 18px;
+        float: left;
+        width: 50%; } }
+    .top-header .small-menu .small-lang-nav li a {
+      text-decoration: none; }
       @media screen and (max-width: 1199px) {
-        .top-header .small-lang-nav li {
-          background: #434343;
-          color: #5a5a5a;
-          text-align: center;
-          padding: 18px;
-          float: left;
-          width: 50%; } }
-      .top-header .small-lang-nav li a {
-        text-decoration: none;
-        color: #666; }
-        @media screen and (max-width: 1199px) {
-          .top-header .small-lang-nav li a {
-            color: #fff; } }
-      .top-header .small-lang-nav li a:hover {
-        text-decoration: underline; }
-        @media screen and (max-width: 1199px) {
-          .top-header .small-lang-nav li a:hover {
-            text-decoration: none; } }
-      .top-header .small-lang-nav li a:after {
-        visibility: hidden; }
-    .top-header .small-lang-nav li:first-child {
-      border-right: 1px solid #ccc;
-      padding-left: 0; }
+        .top-header .small-menu .small-lang-nav li a {
+          color: #fff; } }
+    .top-header .small-menu .small-lang-nav li a:hover {
+      text-decoration: underline; }
       @media screen and (max-width: 1199px) {
-        .top-header .small-lang-nav li:first-child {
-          border-right: 1px solid #343434; } }
-    .top-header .small-lang-nav li:last-child {
+        .top-header .small-menu .small-lang-nav li a:hover {
+          text-decoration: none; } }
+    .top-header .small-menu .small-lang-nav li a:after {
+      visibility: hidden; }
+    @media screen and (max-width: 1199px) {
+      .top-header .small-menu .small-lang-nav li:first-child {
+        border-right: 1px solid #343434; } }
+    .top-header .small-menu .small-lang-nav li:last-child {
       padding: 0; }
-      .top-header .small-lang-nav li:last-child a {
+      .top-header .small-menu .small-lang-nav li:last-child a {
         background: #434343; }
   .top-header .menu-btn.active span:nth-of-type(1) {
     -webkit-transform: translateY(3px) rotate(-45deg);
@@ -773,12 +767,9 @@ ul {
     -webkit-transform: translateY(-4px) rotate(45deg);
     -ms-transform: translateY(-4px) rotate(45deg);
     transform: translateY(-4px) rotate(45deg); }
-  .top-header .menu-btn.active ~ ul {
-    position: absolute;
-    background: #434343;
-    display: block;
-    width: 100%;
-    z-index: 999; }
+  .top-header .menu-btn.active ~ div {
+    visibility: visible;
+    height: 407px; }
   .top-header .global-nav {
     position: relative; }
     @media screen and (max-width: 1199px) {
@@ -911,6 +902,10 @@ ul {
         width: 100%; } }
   .top-header .slider:hover {
     opacity: 0.6; }
+  @media screen and (max-width: 1199px) {
+    .top-header .slick-prev,
+    .top-header .slick-next {
+      z-index: -1; } }
 
 /* ヘッダー▲
 ========================================================================== */
@@ -1011,6 +1006,31 @@ ul {
     .news .news-list .title {
       font-size: 1.2rem;
       line-height: 1.8; } }
+  .news #news1-tab:checked ~ .news-nav .panel1 {
+    border-bottom: none; }
+    .news #news1-tab:checked ~ .news-nav .panel1 .panels {
+      border-top: 5px solid #f2f2f2;
+      padding-top: 20px; }
+  .news #news2-tab:checked ~ .news-nav .panel2 {
+    border-bottom: none; }
+    .news #news2-tab:checked ~ .news-nav .panel2 .panels {
+      border-top: 5px solid #f2f2f2;
+      padding-top: 20px; }
+  .news #news3-tab:checked ~ .news-nav .panel3 {
+    border-bottom: none; }
+    .news #news3-tab:checked ~ .news-nav .panel3 .panels {
+      border-top: 5px solid #f2f2f2;
+      padding-top: 20px; }
+  .news #news4-tab:checked ~ .news-nav .panel4 {
+    border-bottom: none; }
+    .news #news4-tab:checked ~ .news-nav .panel4 .panels {
+      border-top: 5px solid #f2f2f2;
+      padding-top: 20px; }
+  .news #news5-tab:checked ~ .news-nav .panel5 {
+    border-bottom: none; }
+    .news #news5-tab:checked ~ .news-nav .panel5 .panels {
+      border-top: 5px solid #f2f2f2;
+      padding-top: 20px; }
   .news #news1-tab:checked ~ #news1 {
     display: block; }
   .news #news2-tab:checked ~ #news2 {
